# clean-hydrogen-resilience-model

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  LICENSE-DOCS  Makefile  README.md  REFRESH.md  SECURITY.md  investor_memo.md  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
deck/: pitch.md
docs/: index.html  mutation_baseline.md  scan_non_ascii.py
grants/: CALL_TRACKER.md  PARTNER_ONEPAGER.md  _shared_narrative.md  au_arena.md  eu_horizon_europe_cluster5.md  eu_innovation_fund.md  nz_eeca_callaghan.md  us_arpa_e.md  us_doe_h2_programs.md
grants/letters/: README.md  _TEMPLATE_loi.md
model/: .mutmut-cache  pyproject.toml
model/data/: scenarios.yaml  tech_params.yaml
model/mutants/: pyproject.toml  setup.cfg
model/mutants/src/electicity_model/: lcoe.py
model/mutants/tests/: _perf_baseline.json  test_cli_e2e.py  test_finance.py  test_finance_branches.py  test_lcoe_edges.py  test_lcoe_invariants.py  test_perf_extended.py  test_regions.py  test_render_golden.py  test_scenarios.py  test_schema_validation.py
model/mutants/tests/_golden/: district_table.md
model/src/electicity_model/: cli.py  constants.py  diplomacy.py  finance.py  lcoe.py  packaging.py  paths.py  profile_cli.py  regions.py  render.py  scenarios.py  sensitivity.py  supply.py  tco.py  tech.py  tech_registry.py
model/tests/: _js_parity_harness.js  test_cli_e2e.py  test_data.py  test_diplomacy.py  test_diplomacy_constants_block.py  test_lcoe.py  test_packaging.py  test_perf.py  test_regions.py  test_render.py  test_sensitivity.py  test_supply_shock.py  test_tco.py  test_tech_registry.py
model/tests/_golden/: truck_table.md
playground/: microgrid_sim.html  microgrid_sim.js
report/: 00_executive_summary.md  01_problem_and_scope.md  02_technology_landscape.md  03_car_track.md  04_district_track.md  05_economics_lcoe_tco.md  06_environmental_lca.md  07_risk_register.md  08_roadmap_milestones.md  09_appendix_fringe_tech.md  10_supply_resilience_and_regions.md  11_extreme_threats_and_zta_zte.md  _generated_tables.md  references.md
