[project]
name = "electicity_model"
version = "0.5.0"
description = "Cost & feasibility model for water-medium energy research project"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
    "matplotlib>=3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1",
    "pytest-cov>=7.1",
    "hypothesis>=6.155",
]
export = [
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "python-docx>=1.2",
]

[project.scripts]
electicity = "electicity_model.cli:main"

[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "perf: performance-budget tests (skip on slow CI with -m 'not perf')",
    "regression: regression-against-baseline performance tests",
]

[tool.coverage.run]
source = ["electicity_model"]
omit = [
    "*/cli.py",
    "*/profile_cli.py",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
]
