[project]
name = "electicity_model"
version = "0.2.0"
description = "Cost & feasibility model for water-medium energy research project"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.2",
    "matplotlib>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
]
export = [
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "python-docx>=1.1",
]

[project.scripts]
electicity = "electicity_model.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "perf: performance-budget tests (skip on slow CI with -m 'not perf')",
    "regression: regression-against-baseline performance tests",
]

[tool.coverage.run]
source = ["electicity_model"]
omit = [
    "*/cli.py",
    "*/profile_cli.py",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
]
